Fixed side scrollbar

--- a/calebnet.css
+++ b/calebnet.css
@@ -2,6 +2,9 @@ html *
 {
     font-family: 'Roboto', sans-serif;
     scroll-behavior: smooth;
+    max-width: 100%;
+    overflow-x: hidden;
+
 }
 
 a *{
